[NETBEANS-5976] - cleanup Integer deprecation warnings (#3154)
In Java 9,

new Integer()

has been deprecated..

   [repeat] /home/bwalker/src/netbeans/nbi/engine/src/org/netbeans/installer/wizard/components/actions/InstallAction.java:183: warning: [deprecation] Integer(int) in Integer has been deprecated
   [repeat]                              new Integer(INSTALLATION_ERROR_CODE));
   [repeat]                              ^

There are a LOT of these, so I'm staging the changes so they are more manageable. In addition, these
changes do not change behavior for legacy Java runtime environments. But, in Java 9, and afterwards,
these changes can provide a possible speedup..