@@ -265,7 +265,7 @@ public class ExportDiffAction extends ContextAction {
                 }
             }
             if (success) {
-                StatusDisplayer.getDefault().setStatusText(NbBundle.getMessage(ExportDiffAction.class, "BK3004", new Integer(exportedFiles)));
+                StatusDisplayer.getDefault().setStatusText(NbBundle.getMessage(ExportDiffAction.class, "BK3004", Integer.valueOf(exportedFiles)));
                 if (exportedFiles == 0) {
                     destination.delete();
                 } else {
